added item list and

--- a/src/app/home/add-to-cart-dialog/add-to-cart-dialog.component.html
+++ b/src/app/home/add-to-cart-dialog/add-to-cart-dialog.component.html
@@ -1,7 +1,8 @@
 <mat-dialog-content>
-  <p>
+  <p class="popup-message">
     {{message}}
   </p>
+  <h4 class="popup-message">{{pname}}</h4>
   <mat-card class="dialog-message-content">
     <mat-card-content>
       <mat-form-field appearance="fill">
