added title to product price list

--- a/src/app/home/product-price/product-price.component.css
+++ b/src/app/home/product-price/product-price.component.css
@@ -2,5 +2,9 @@ table {
   width: 100%;
 }
 .price-list-container{
-  padding: 40px;
+  padding: 1px 40px 40px 40px;
+}
+
+.price-list-title{
+  text-align: center;
 }
