--- a/src/app/home/product-price/product-price.component.html
+++ b/src/app/home/product-price/product-price.component.html
@@ -1,3 +1,4 @@
+<diV><h3 class="price-list-title">{{productName}} prices (units 1 - 50)</h3></diV>
 <div class="price-list-container">
   <table mat-table [dataSource]="priceList" class="mat-elevation-z8">
 
