--- a/src/app/home/add-to-cart-dialog/add-to-cart-dialog.component.css
+++ b/src/app/home/add-to-cart-dialog/add-to-cart-dialog.component.css
@@ -1,6 +1,7 @@
 .dialog-message-content{
   display: table-caption;
   text-align: center;
+  margin-bottom: 12px;
 }
 .popup-message{
   text-align: center;
