--- a/src/app/home/item-list/item-list.component.html
+++ b/src/app/home/item-list/item-list.component.html
@@ -9,7 +9,10 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element">  <a routerLink="{{element.id}}">{{element.name}}</a> </td>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button color="primary" (click)="goToProductPrice(element.id,element.name)">
+        {{element.name}}
+      </button></td>
     </ng-container>
 
     <ng-container matColumnDef="cartonCost">
